--- a/ch1/naver.html
+++ b/ch1/naver.html
@@ -81,7 +81,10 @@
     <div>
         <h2>로그인</h2>
         <p>네이버를 더 안전하고 편리하게 이용하세요</p>
-        <a href="#"><i>네이버로그인</i></a>
+        <a href="#">
+            <!-- <i>: 중요한 문구 또는 아이콘 태그라는 뜻   -->
+            <i>네이버로그인</i>
+        </a>
     </div>
     <h4></h4>
     <h5></h5>
